--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -7,6 +7,7 @@
         </div>
         <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
       <% end %>
+      <li><%= link_to 'Favorites', favoritings_user_path(current_user) %></li>
     </aside>
     <div class="col-xs-8">
       <%= render 'microposts/microposts', microposts: @microposts %>
